--- a/index.html
+++ b/index.html
@@ -9,11 +9,20 @@
 </head>
 
 <body>
+  <div>
   <h1>Hello, GitHub!</h1>
   <p>This is my first web page using version control with Git and GitHub.</p>
   <p>This is my first web page using version control with Git and GitHub. I forked a repository to create this. A fork
     in Git is a personal copy of another user's repository that allows you to make changes without affecting the
     original project. </p>
 </body>
+</div>
+
+<div>
+<h1>Well this is another try at this using div</h1>
+<p>i have an idea of what div does put i am not entirely sure</p>
+<p>i velieve that div is a section seperater. Ill have to look at it</p>
+
+</div>
 
 </html>
