--- a/index.html
+++ b/index.html
@@ -25,4 +25,15 @@
 
 </div>
 
+<!--A comment to describe what the body tag is: a body tag will contain content in between tags and make it visible on the website-->
+<body>
+<h2>Resources:</h2>
+<ul>
+  <li> <a href="https://www.w3schools.com/html/default.asp">HTML Tutorial</a> </li>
+  <li> <a href="https://www.w3schools.com/css/default.asp">CSS Tutorial</a></li>
+  <li> <a href="https://www.w3schools.com/bootstrap5/index.php">Bootstrap Tutorial</a></li>
+</ul>
+</body>
+
+
 </html>
