--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My First Web Page</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Using bootstrap 5 framework-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
+
 
 <body>
   <div>
@@ -22,8 +25,13 @@
 <h1>Well this is another try at this using div</h1>
 <p>i have an idea of what div does put i am not entirely sure</p>
 <p>i velieve that div is a section seperater. Ill have to look at it</p>
-
 </div>
+<!--Continuation of div-->
+<div class="container p-5 my-5 bg-dark text-white">
+  <h1>My First Bootstrap Page</h1>
+  <p>This container has a dark background color and a white text, and some extra padding and margins.</p>
+</div>
+<
 
 <!--A comment to describe what the body tag is: a body tag will contain content in between tags and make it visible on the website-->
 <body>
