--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
 <div class="container p-5 my-5 bg-dark text-white">
   <h1>My First Bootstrap Page</h1>
   <p>This container has a dark background color and a white text, and some extra padding and margins.</p>
+  <p>This is what div looks like with a class (container)</p>
 </div>
-<
+
 
 <!--A comment to describe what the body tag is: a body tag will contain content in between tags and make it visible on the website-->
 <body>
