--- a/index.html
+++ b/index.html
@@ -12,20 +12,18 @@
 
 
 <body>
-  <div>
+
+  <div class="container">
   <h1>Hello, GitHub!</h1>
   <p>This is my first web page using version control with Git and GitHub.</p>
   <p>This is my first web page using version control with Git and GitHub. I forked a repository to create this. A fork
     in Git is a personal copy of another user's repository that allows you to make changes without affecting the
     original project. </p>
+  <img src="images/stars.jpg" alt="stars" width="320">
+</div>
 </body>
-</div>
 
-<div>
-<h1>Well this is another try at this using div</h1>
-<p>i have an idea of what div does put i am not entirely sure</p>
-<p>i velieve that div is a section seperater. Ill have to look at it</p>
-</div>
+
 <!--Continuation of div-->
 <div class="container p-5 my-5 bg-dark text-white">
   <h1>My First Bootstrap Page</h1>
