--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
 
 <body>
-
   <div class="container">
   <h1>Hello, GitHub!</h1>
   <p>This is my first web page using version control with Git and GitHub.</p>
@@ -20,9 +19,41 @@
     in Git is a personal copy of another user's repository that allows you to make changes without affecting the
     original project. </p>
   <img src="images/stars.jpg" alt="stars" width="320">
+  <p></p>
 </div>
 </body>
 
+<!-- Carousel -->
+<div id="demo" class="carousel slide" data-bs-ride="carousel">
+
+  <!-- Indicators/dots -->
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+  </div>
+
+  <!-- The slideshow/carousel -->
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="kyoto.jpg" alt="kyoto" class="d-block w-100">
+    </div>
+    <div class="carousel-item">
+      <img src="osaka.jpg" alt="osaka" class="d-block w-100">
+    </div>
+    <div class="carousel-item">
+      <img src="tokyo.jpg" alt="tokyo" class="d-block w-100">
+    </div>
+  </div>
+
+  <!-- Left and right controls/icons -->
+  <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </button>
+</div>
 
 <!--Continuation of div-->
 <div class="container p-5 my-5 bg-dark text-white">
