--- a/index.html
+++ b/index.html
@@ -65,12 +65,14 @@
 
 <!--A comment to describe what the body tag is: a body tag will contain content in between tags and make it visible on the website-->
 <body>
+  <div class="container">
 <h2>Resources:</h2>
 <ul>
   <li> <a href="https://www.w3schools.com/html/default.asp">HTML Tutorial</a> </li>
   <li> <a href="https://www.w3schools.com/css/default.asp">CSS Tutorial</a></li>
   <li> <a href="https://www.w3schools.com/bootstrap5/index.php">Bootstrap Tutorial</a></li>
 </ul>
+</div>
 </body>
 
 
