--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
   <!-- The slideshow/carousel -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="kyoto.jpg" alt="kyoto" class="d-block w-100">
+      <img src="images/kyoto.jpg" alt="kyoto" width="500">
     </div>
     <div class="carousel-item">
-      <img src="osaka.jpg" alt="osaka" class="d-block w-100">
+      <img src="images/osaka.jpg" alt="osaka" width="500">
     </div>
     <div class="carousel-item">
-      <img src="tokyo.jpg" alt="tokyo" class="d-block w-100">
+      <img src="images/tokyo.jpg" alt="tokyo" width="500">
     </div>
   </div>
 
