--- a/index.html
+++ b/index.html
@@ -33,18 +33,20 @@
     <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
   </div>
 
+  <div class="container">
   <!-- The slideshow/carousel -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="images/kyoto.jpg" alt="kyoto" width="500">
+      <img src="images/kyoto.jpg" alt="kyoto" class="d-block w-100">
     </div>
     <div class="carousel-item">
-      <img src="images/osaka.jpg" alt="osaka" width="500">
+      <img src="images/osaka.jpg" alt="osaka" class="d-block w-100">
     </div>
     <div class="carousel-item">
-      <img src="images/tokyo.jpg" alt="tokyo" width="500">
+      <img src="images/tokyo.jpg" alt="tokyo" class="d-block w-100">
     </div>
   </div>
+</div>
 
   <!-- Left and right controls/icons -->
   <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
