--- a/index.html
+++ b/index.html
@@ -38,12 +38,24 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="images/kyoto.jpg" alt="kyoto" class="d-block w-100">
+    <div class="carousel-caption">
+        <h3>Kyoto/きょと</h3>
+        <p>We had such a great time in 日本</p>
+      </div>
     </div>
     <div class="carousel-item">
       <img src="images/osaka.jpg" alt="osaka" class="d-block w-100">
+      <div class="carousel-caption">
+        <h3>Osaka/おさか</h3>
+        <p>We had such a great time in 日本</p>
+      </div>
     </div>
     <div class="carousel-item">
       <img src="images/tokyo.jpg" alt="tokyo" class="d-block w-100">
+      <div class="carousel-caption">
+        <h3>Tokyo/ときょ</h3>
+        <p>We had such a great time in 日本</p>
+      </div>
     </div>
   </div>
 </div>
