--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="carousel-item">
       <img src="images/tokyo.jpg" alt="tokyo" class="d-block w-100">
       <div class="carousel-caption">
-        <h3>Tokyo/ときょ</h3>
+        <h3>Tokyo/とうきょう</h3>
         <p>We had such a great time in 日本</p>
       </div>
     </div>
