--- a/index.html
+++ b/index.html
@@ -2,26 +2,41 @@
 <html lang="en">
 
 <head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Using bootstrap 5 framework-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Web Page Template</title>
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- jQuery (needed for .load()) -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </head>
 
 
 <body>
+
+  <!-- Navbar gets injected here -->
+    <div id="nav-placeholder"></div>
+
+    <!-- Place Main Content here -->
+    <div class="container">
+        <h1>Navpage</h1>
+        <p>This is to help you create new webpages from this template</p>
+
+    </div>
+
+
   <div class="container">
   <h1>Hello, GitHub!</h1>
   <p>This is my first web page using version control with Git and GitHub.</p>
   <p>This is my first web page using version control with Git and GitHub. I forked a repository to create this. A fork
     in Git is a personal copy of another user's repository that allows you to make changes without affecting the
     original project. </p>
-  <img src="images/stars.jpg" alt="stars" width="320">
+  <img src="images/stars.jpg" alt="Milky way taken from the northern hemisphere" width="320">
   <p></p>
 </div>
-</body>
+
 
 <!-- Carousel -->
 <div id="demo" class="carousel slide" data-bs-ride="carousel">
@@ -78,7 +93,7 @@
 
 
 <!--A comment to describe what the body tag is: a body tag will contain content in between tags and make it visible on the website-->
-<body>
+
   <div class="container">
 <h2>Resources:</h2>
 <ul>
@@ -87,6 +102,14 @@
   <li> <a href="https://www.w3schools.com/bootstrap5/index.php">Bootstrap Tutorial</a></li>
 </ul>
 </div>
+
+
+    <script>
+        $("#nav-placeholder").load("navbar.html");
+    </script>
+    <!-- Bootstrap JS must go last -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 
