commiy final changes

--- a/about.html
+++ b/about.html
@@ -28,11 +28,12 @@
     <div class="container mt-3">
   <h2>Simple Collapsible</h2>
   <p>Click on the button to toggle between showing and hiding content.</p>
-  <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#demo">Simple collapsible</button>
+  <button type="button" class="btn btn-primary btn-lg" data-bs-toggle="collapse" data-bs-target="#demo">Simple collapsible</button>
   <div id="demo" class="collapse">
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    This is a secret message to all the people who manage to click on the blue button. 
+    For anyone who dismissed the button will miss out on something very special. 
+    the secret is...... 
+    tune in next time. 
   </div>
 </div>
 
