--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
   <!-- Navbar gets injected here -->
-   
+   <!-- Navbar gets injected here -->
     <div id="nav-placeholder"></div>
 
     <!-- Place Main Content here -->
